--- a/frontend/src/components/PageLayout/PageLayout.module.css
+++ b/frontend/src/components/PageLayout/PageLayout.module.css
@@ -1,6 +1,13 @@
 .component {
+    width: 100%;
+    height: 100%;
+
+    background-image: url("/src/assets/images/background-image.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .layout {
-
 }
