--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,7 +1,15 @@
 .component {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+    max-height: 256px;
+
+    font-family: "Lobster", cursive;
+    font-style: italic;
+    font-size: 6rem;
+    font-weight: 400;
     
-}
-
-.header {
-
 }
