--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -2,14 +2,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 
     width: 100%;
     height: 100%;
     max-height: 256px;
+}
+
+.header {
+    width: 100%;
+    padding-left: 20px;
 
     font-family: "Lobster", cursive;
     font-style: italic;
     font-size: 6rem;
-    font-weight: 400;
+    font-weight: 400; 
+    text-align: center;
+}
+
+.sub_text {
+    width: 100%;
+    padding-left: 40px;
     
+    font-family: "Anton", cursive;
+    font-style: oblique;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-align: center;
 }
