--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -18,15 +18,19 @@
     font-size: 6rem;
     font-weight: 400; 
     text-align: center;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    -webkit-text-stroke: 1px greenyellow
 }
 
 .sub_text {
     width: 100%;
-    padding-left: 40px;
-    
+    padding-left: 60px;
+
     font-family: "Anton", cursive;
     font-style: oblique;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 400;
     text-align: center;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    -webkit-text-stroke: 1px gold
 }
