--- a/frontend/src/components/ParagraphTitle/ParagraphTitle.module.css
+++ b/frontend/src/components/ParagraphTitle/ParagraphTitle.module.css
@@ -1,11 +1,11 @@
 .title {
-    width: 100%;
-    padding-left: 30px;
+    width: calc(100% - 30px);;
+    margin-left: 30px;
     margin-top: 10px;
     margin-bottom: 10px;
 
     font-family: "Anton", cursive;
     font-style: oblique;
     font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 100;
 }
