--- a/frontend/src/components/InputField/InputField.module.css
+++ b/frontend/src/components/InputField/InputField.module.css
@@ -14,6 +14,11 @@
     border-radius: 5px;
     font-size: 1rem;
     padding-left: 5px;
+
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
 }
 
 .input_field:focus {
