--- a/frontend/src/components/PriceWindow/PriceWindow.module.css
+++ b/frontend/src/components/PriceWindow/PriceWindow.module.css
@@ -13,8 +13,14 @@
     height: 400px;
     border: 1px solid black;
 
-    background-color: white;
+    background: conic-gradient(from .5turn at 50% 110%, white, orange);
     box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
+    transition: transform 0.5s ease-in-out;
+}
+
+.window:hover {
+    transform: scale(1.03);
+    transition: transform 0.3s ease;
 }
 
 .background {
@@ -32,12 +38,30 @@
 
 .price_field {
     width: 100%;
-    height: 50%;
+    height: calc(50% - 20px);
+    display: flex;
+    justify-content: center;
+    font-family: "Anton", cursive;
+    font-style: oblique;
+    font-size: 3.5rem;
+    font-weight: 100;
 }
 
 .window_text {
     width: 100%;
-    height: 50%;
+    height: calc(50% - 20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: "Anton", cursive;
+    font-style: oblique;
+    font-size: 3rem;
+    font-weight: 100;
+
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .exit_button {
@@ -45,8 +69,8 @@
     justify-content: center;
     align-items: center;
 
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 
     background-color: rgb(255, 0, 0);
     color: white;
@@ -60,7 +84,7 @@
 .button_container {
     display: flex;
     justify-content: end;
-    height: 30px;
+    height: 40px;
     width: 100%;
 
 }
