--- a/frontend/src/components/InputField/InputField.module.css
+++ b/frontend/src/components/InputField/InputField.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: calc(100% - 128px);
-    height: 64px;
+    height: 100px;
     margin-top: 20px;
     margin-left: 128px;
 }
@@ -36,3 +36,18 @@
     font-weight: 100;
 }
 
+.error_label {
+    color: red;
+    height: 1rem;
+    height: 12px;
+    margin-top: 2px;
+
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
