--- a/frontend/src/components/ErrorWindow/ErrorWindow.module.css
+++ b/frontend/src/components/ErrorWindow/ErrorWindow.module.css
@@ -1,12 +1,14 @@
 .message {
-    width: 100%;
+    width: calc(100% - 100px);
     height: calc(50% - 20px);
     display: flex;
     justify-content: center;
     font-family: "Anton", cursive;
     font-style: oblique;
-    font-size: 2rem;
+    font-size: 1.35rem;
     font-weight: 100;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .header {
